<resources>
    <string name="app_name">UaeDemo</string>
    <string name="more">More&#8230;</string>
    <string name="dcc">DCC</string>
    <string name="terminal_id">Terminal Id</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="address">Address</string>
    <string name="country_code">Country Code</string>
    <string name="currency_code">Currency Code</string>
    <string name="admin_password">Admin Password</string>
    <string name="supper_visor_password">Supper Visor Password</string>
    <string name="default_transaction">Default Transaction</string>
    <string name="max_pending_reversal_count">Max Pending Reversal Count</string>
    <string name="nol_device_id">NOL Device Id</string>
    <string name="sam_id">SAM Id</string>
    <string name="ask_refund_auth_code">Ask Refund Auth Code</string>
    <string name="enable_nol">Enable NOL</string>
    <string name="is_program_download">Is Program Download</string>
    <string name="is_log_upload">Is Log Upload</string>
    <string name="merchant_category_code">Merchant Category Code</string>
    <string name="terminal_no">Terminal No</string>
    <string name="terminal_type">Terminal Type</string>
    <string name="terminal_capabilities">Terminal Capabilities</string>
    <string name="add_terminal_capabilities">Add Terminal Capabilities</string>
    <string name="transaction_currency_code">Transaction Currency Code</string>
    <string name="refer_currency_code">Refer Currency Code</string>
    <string name="aid">AID</string>
    <string name="aid_">Application Id</string>
    <string name="tac_denial">Tac Denial</string>
    <string name="tac_online">Tac Online</string>
    <string name="tac_default">Tac Default</string>
    <string name="ddol">DDOL</string>
    <string name="version">Version</string>
    <string name="tdol">TDOL</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_responsive">ResponsiveActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="config_param">Config Param</string>
    <string name="emv_param">EMV Param</string>
    <string name="cls_param">CLS Param</string>
    <string name="ca_key_param">CA Key Param</string>
    <string name="receipt_param">Receipt Param</string>
    <string name="tms_connection_param">TMS Connection Param</string>
    <string name="key_config_param">Key Config Param</string>
    <string name="nol_param">NOL Param</string>
    <string name="pos_component">POS Component</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="merchant_address">Merchant Address</string>
    <string name="encrypted_sam">Encrypted Sam</string>
    <string name="alpha_numeric_country_code" >Alpha Numeric Currency Code</string>
    <string name="numeric_currency_code">Numeric Currency Code</string>
    <string name="exponential_currency_code">Exponential Currency Code</string>
    <string name="enable_dcc">Enable DCC</string>
    <string name="ask_for_refund_auth_code">Ask for refund auth code</string>
    <string name="enable_program_download">Enable Program Download</string>
    <string name="enable_log_upload">Enable Log upload</string>
    <string name="emv_version">EMV Version</string>
    <string name="selection_flag">Selection Flag</string>
    <string name="vlp_value">VLP Value</string>
    <string name="target_percentage">Target Percentage</string>
    <string name="max_target_percentage">Max Target Percentage</string>
    <string name="floor_limit">Floor Limit</string>
    <string name="thres_hold">Thres Hold</string>
    <string name="aid_list">AID List</string>
    <string name="aquirer_id">Acquirer Id</string>
    <string name="cls_version">CLS Version</string>
    <string name="terminal_country_code">Terminal Country Code</string>
    <string name="cls_terminal_data">CLS Terminal Data</string>
    <string name="scheme_type">Scheme Type</string>
    <string name="kernel_id">Kernel Id</string>
    <string name="cvm_limit">CVM Limit</string>
    <string name="transaction_limit">Transaction Limit</string>
    <string name="security_capability">Seciurity Capability</string>
    <string name="aid_option">Aid Option</string>
    <string name="tcc">TCC</string>
    <string name="language_support">Language Support</string>
    <string name="chip_cvm_cap_req">Chip CVM cap req</string>
    <string name="chip_cvm_cap_not_req">Chip CVM cap not req</string>
    <string name="pay_pass_u_dol">Paypass UDOL</string>
    <string name="kernel_configuration">Kernel Configuration</string>
    <string name="mag_stripe_version">Magstripe Version</string>
    <string name="mag_cvm_cap_req">MAG CVM cap req</string>
    <string name="mag_cvm_cap_not_req">MAG CVM cap not req</string>
    <string name="cles_limit_no_dcv">CLS Limit no DCV</string>
    <string name="cles_limit_dcv">CLS Limit DCV</string>
    <string name="risk_management">Risk Management</string>
    <string name="aid_name">Aid Name</string>
    <string name="app_selection">App Selection</string>
    <string name="modulus">Modulus</string>
    <string name="rid">Rid</string>
    <string name="check_sum">Check Sum</string>
    <string name="exp_date">Exp Date</string>
    <string name="rid_index">Rid Index</string>
    <string name="exponent">Exponent</string>
    <string name="ca_key_version">CA Key Version</string>
    <string name="merchant">Merchant</string>
    <string name="slogan1">Slogan1</string>
    <string name="slogan2">Slogan2</string>
    <string name="enable_card_holder_name">Enable Card Holder Name</string>
    <string name="customer">Customer</string>
    <string name="gprs_primary">GPRS Primary</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="connection_time_out">Connection Time Out</string>
    <string name="response_time_out">Response Time Out</string>
    <string name="retry_time_out">Retry Time Out</string>
    <string name="retry_count">Retry Count</string>
    <string name="is_ssl_enabled">IS SSL Enabled</string>
    <string name="is_ssl_chaching_enabled">Is SSL Chaching Enabled</string>
    <string name="apn">APN</string>
    <string name="gprs_secondary">GPRS Secondary</string>
    <string name="gprs_sim1">GPRS SIM1</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="priorty">Priorty</string>
    <string name="is_sim1_enabled">Is SIM1 Enabled</string>
    <string name="gprs_sim2">GPRS SIM2</string>
    <string name="is_sim2_enabled">Is SIM2 Enabled</string>
    <string name="tcp_primary">TCP Primary</string>
    <string name="tcp_secondary">TCP Secondary</string>
    <string name="gprs_auth_primary">GPRS Auth Primary</string>
    <string name="gprs_auth_secondary">GPRS Auth Secondary</string>
    <string name="key_name">Key Name</string>
    <string name="key_value">Key Value</string>
    <string name="nol_aid">NOL Aid</string>
    <string name="offline_single_transaction_amount_limit">Offline Single Transaction Amt Limit</string>
    <string name="offline_approved_count_limit">Offline Approved Count Limit</string>
    <string name="beid">Beid</string>
    <string name="mercury_bin">Mercury BIN</string>
    <string name="max">Max</string>
    <string name="tcp_primary_ip">TCP Primary IP</string>
    <string name="tcp_primary_port">TCP Primary Port</string>
    <string name="tcp_secondary_ip">TCP Secondary IP</string>
    <string name="tcp_secondary_port">TCP Secondary Port</string>
    <string name="gprs_primary_ip">GPRS Primary IP</string>
    <string name="gprs_primary_port">GPRS Primary Port</string>
    <string name="gprs_secondary_ip">GPRS Secondary IP</string>
    <string name="gprs_secondary_port">GPRS Secondary Port</string>
    <string name="app_version">App Version</string>
    <string name="config_version">Config Version</string>
    <string name="express_pay_version">Express Pay Version</string>
    <string name="ftp_version">FTP Version</string>
    <string name="link_layer_version">Link Layer Version</string>
    <string name="manager_version">Manager Version</string>
    <string name="os_version">OS Version</string>
    <string name="paypass_version">Paypass Version</string>
    <string name="paywave_version">Paywave Version</string>
    <string name="quickpass_version">Quickpass Version</string>
    <string name="sdk_version">SDK Version</string>
    <string name="ssl_version">SSL Version</string>
</resources>