<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.uae.uaedemo.model.AidListItem" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            android:text="@string/aid_"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            android:text="@{data.aidName}"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/left_ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selection_flag"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.selFlag}"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text5">

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vlp_value"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:text="@{data.vlpVal}"
                android:textColor="@color/gray" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/left_ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_ll1">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/target_percentage"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.targetPer}"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_ll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/right_ll1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_target_percentage"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:text="@{data.maxTargetPer}"
                android:textColor="@color/gray" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/left_ll3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_ll2">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/floor_limit"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.floorLimit}"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_ll3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/right_ll2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thres_hold"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:text="@{data.threshold}"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/left_ll4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_ll3">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tac_denial"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.tacDenial}"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_ll4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/right_ll3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:text="@string/tac_online"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:text="@{data.tacOnline}"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/left_ll5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_ll4">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/tac_default"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.tacDefault}"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_ll5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/right_ll4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:text="@{data.version}"
                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/left_ll6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/left_ll5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ddol"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{data.DDOL}"

                android:textColor="@color/gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_ll6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/pading_10dp"
            android:paddingStart="@dimen/pading_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/right_ll5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:text="@string/tdol"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:text="@{data.TDOL}"
                android:textColor="@color/gray" />
        </LinearLayout>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>